# idmlib

./: .gitignore  CMakeLists.txt  ConfigureChecks.cmake  README.md  Rakefile  build.sh  idmlib-version.h.cmake  push-resource.sh  update-resource.sh
conf/: ml.xml
include/: idmlib.hpp
include/holder/: Holder.h
include/idmlib/: idm_types.h  lshkit.h
include/keyphrase-extraction/: TermGroup.hpp  algorithm.hpp  algorithm_def.h  fwd.h  input.hpp  output.hpp  scorer.hpp
include/util/: MemoryTrie.hpp
resource/kpe/: invalid_chn_bigram.dic  ubtrain
source/: CMakeLists.txt  doxyfile  doxygen.cf.in
source/b5m/: b5mc_scd_generator.cc  b5mo_processor.cc  b5mo_sorter.cc  bmn_clustering.cc  brand_manager.cc  hotel_processor.cc  ngram_synonym.cc  product_db.cc  product_discover.cc  product_matcher.cc  product_price.cc  product_term_analyzer.cc  psm_indexer.cc  ticket_processor.cc  tour_processor.cc  tuan_processor.cc
source/dc/: LaMgrFactory.cc  ScdDocument.cc
source/duplicate-detection/: BloomFilter.cc  BloomFilter.cc1  BroderAlgorithm.cc  BroderAlgorithm.cc1  CharikarAlgorithm.cc  CharikarAlgorithm.cc1  ContentChunker.cc1  DocPreProcessor.cc  DupDetector.cpp  DupDetector.k  FingerPrinter.cc1  GetToken.cc  GetToken.cc1  NearDupDetect.cc  NearDupDetect.cc1  NearDuplicateClustering.cc  NearDuplicateClustering.cc1  NearDuplicateSignature.cc  NearDuplicateSignature.cc1  NumTokens.cc1  RabinPoly.cc  RandomProjection.cc  RandomProjection.cc1  RandomProjectionEngine.cc1  TokenGen.cc  TokenGen.cc1  UtilProperty.cpp1  UtilTool.cpp1  charikar_algo.cpp  dupDetector.cpp  dup_detector.cpp  fp_tables.cc  group_table.cc  makefile  msb.cc1  rand_proj.cpp  rand_proj_gen.cpp
source/duplicate-detection/config/: dup.property
source/duplicate-detection/test/: makefile  t_dupd.cpp
source/fpm/: fptree.cpp
source/ise/: char_bit_cnt.cpp  extractor.cpp  iseindex.cpp  lshindex.cpp  psm.cpp  sift.cpp
source/itemset/: all-maximal-sets-satelite.cpp  data-source-iterator.cpp  fptree.cpp  set-properties.cpp
source/keyphrase-extraction/: KPESimpleAPI.cpp  SimpleIDManager.cpp  kpe_evaluate.cc  kpe_knowledge.cc  kpe_scorer.cc  kpe_task.cc
source/lshkit/: apost.cpp  char_bit_cnt.cpp  gsl_util.c  gsl_util.h  mplsh-model.cpp  mplsh.cpp
source/maxent/: display.cpp  getopt.c  getopt1.c  gistrainer.cpp  lbfgs_wrapper.c.bak  lbfgstrainer.cpp.bak  maxentmodel.cpp  mmapfile.c  modelfile.cpp  sdrive.c.bak  trainer.cpp
source/nec/: NameEntityDict.cc  NameEntityManager.cc  nec.cc
source/para2vec/: paragraphvec.cpp  word2vec.cpp
source/query-correction/: cn_corpus_trainer.cc  cn_query_correction.cc  fuzzy_pinyin_segmentor.cc
source/query-suggestion/: LogProcessor.cpp  Recommender.cpp  Reminder.cpp
source/resys/: TopItems.cpp
source/resys/incremcf/: IncrementalItemCF.cpp  ItemCFParam.cpp
source/resys/model/: FileDataModel.cpp
source/resys/recommender/: ConjugateGradientOptimizer.cpp  KnnItemBasedRecommender.cpp  SlopeOneRecommender.cpp
source/resys/similarity/: Similarity.cpp
source/semantic_space/: document_vector_space.cc  explicit_semantic_space.cc  kpe_semantic_space_builder.cc  la_semantic_space_builder.cc  semantic_space_builder.cc
source/semantic_space/esa/: DocumentRepresentor.cpp  ExplicitSemanticInterpreter.cpp
source/similarity/: document_similarity.cc  document_similarity_index.cc  term_similarity.cc
source/similarity/all-pairs-similarity-search/: all_pairs_output.cpp  all_pairs_search.cpp
source/test/: CMakeLists.txt  CMakeLists.txt~  TestDir.h  TestHelper.h~
source/test/keyphrase-extraction/: CMakeLists.txt  kpe_types.h  t_KPE.cpp
source/topic-models/common/: samplib.c  stats.c
source/topic-models/llda/: LabeledLDA.cpp
source/translation/: ibm_model1.cc
source/util/: CollectionUtil.cpp  IdMgrFactory.cc  directory_switcher.cc  idm_analyzer.cc  svm.cpp
source/wiki/: category_extractor.cc  entity_extractor.cc  features_gen.cc  ner_extractor.cc
test/: .gitignore  CMakeLists.txt  TestDir.h  TestResources.h  TestResources.h.cmake  test_common.h
test/b5m/: CMakeLists.txt  Runner.cpp  t_b5mo_processor.cc  t_commentdb.cc  t_offer_db_recorder.cc  t_offerdb.cc  t_product_db.cc
test/concept-clustering/: CMakeLists.txt  Runner.cpp  cc_types.h  t_CC.cpp
test/ctr/: CMakeLists.txt  t_ctr.cpp
test/dc/: CMakeLists.txt  ScdDocumentLoader.h  t_dc.cpp
test/duplicate-detection/: CMakeLists.txt  Runner.cpp  algo_test.h  group_table.cpp  t_dupd.cpp  t_group_table.cpp
test/ise/: CMakeLists.txt  ise_builder.cpp
test/itemset/: CMakeLists.txt  Runner.cpp  t_FPTree.cpp
test/keyphrase-extraction/: CMakeLists.txt  Runner.cpp  bce_trainer_cn.cc  kp_weight.cc  kpe_evaluate_tool.cc  kpe_scd_tool.cc  kpe_task_tool.cc  kpe_tool.cc  kpe_types.h  t_KPE.cpp
test/maxent_title/: CMakeLists.txt  maxent_title_util.cpp
test/nec/: CMakeLists.txt  Runner.cpp  libsvm_nec_accuracy.cc  nec_accuracy.cc  t_NEC.cpp  t_nec.h  t_nec_test.cpp  t_nec_train.cpp
test/query-correction/: CMakeLists.txt  Runner.cpp  cn_trainer.cc  t_cn_correction.cc  t_py_seg.cc
test/query-suggestion/: CMakeLists.txt  Runner.cpp  qs_types.h  t_QS.cpp  t_qs.cpp
test/resys/: CMakeLists.txt  ItemCFTest.cpp  ItemCFTest.h  t_FactorizationMachine.cpp  t_IncrementalItemCF.cpp  t_ItemCoVisitation.cpp  t_rec.cpp
test/semantic-space/: CMakeLists.txt  esa_builder.cpp  esa_interpreter.cpp
test/similarity/: CMakeLists.txt  doc_sim.cpp  doc_similarity.cpp  kp_similarity.cc  rig_main.cc
test/tdt/: CMakeLists.txt  Runner.cpp  t_macd.cc  t_similb.cc  t_storage.cc  tdt_scd_tool.cc
test/topic-models/: CMakeLists.txt  llda.cc
test/util/: CMakeLists.txt  Runner.cpp  resource_generate.cc  t_container_switch.cc  t_mining_analyzer.cc  text_converter.cc
test/wiki/: CMakeLists.txt  category_extractor_main.cc  entity_check.cc  entity_extractor_main.cc  feature_gen_main.cc  feature_libsvm_converter.cc  ne_filter.cc  ner_extractor_main.cc
testbin/other/: eng_adj  eng_noun  eng_verb  loc_l_pattern.txt  loc_r_pattern.txt  one_loc_l_pattern.txt  one_loc_r_pattern.txt  one_org_l_pattern.txt  one_org_r_pattern.txt  (+18 more)
(+380 files in other folders)
