SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${IDMLIB_SOURCE_DIR}/testbin")
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

CONFIGURE_FILE(
  TestResources.h.cmake
  ${CMAKE_CURRENT_SOURCE_DIR}/TestResources.h
  ESCAPE_QUOTES @ONLY
  )

ADD_SUBDIRECTORY(keyphrase-extraction)
ADD_SUBDIRECTORY(nec)
#ADD_SUBDIRECTORY(query-suggestion)
ADD_SUBDIRECTORY(duplicate-detection)
ADD_SUBDIRECTORY(wiki)
ADD_SUBDIRECTORY(util)
ADD_SUBDIRECTORY(similarity)